refactor(backend): jwt token in response when auth now
